2007-09-18  Jonh Wendell  <jwendell@gnome.org>

	* src/vinagre-favorites.c:
	  - Fixed a crash when saving to favorites (Closes #477251)

2007-09-17  Jonh Wendell  <jwendell@gnome.org>

	* data/vinagre.desktop.in.in:
	  - Changed .desktop entry to 'Remote Desktop Viewer' (Closes #476951)

2007-09-17  Jonh Wendell  <jwendell@gnome.org>

	* src/*.[ch]:
	  - Updated license header (Closes #477303)

2007-09-17  Jonh Wendell  <jwendell@gnome.org>

	* data/vinagre.glade:
	  - Don't mark some strings for translation (Closes #477300)
	  - Changed min and max port numbers (Closes #477654)

2007-09-17  Jonh Wendell  <jwendell@gnome.org>

	* src/vinagre-tab.c,
	* src/vinagre-window.c:
	  - Show tabs in fullscreen mode when ungrab the pointer.

2007-09-13  Jonh Wendell  <jwendell@gnome.org>

	* configure.ac,
	* README,
	* NEWS,
	* INSTALL:
	  - Updated to version 0.3

2007-09-13  Jonh Wendell  <jwendell@gnome.org>

	* src/vinagre-tab.[ch],
	* src/vinagre-window.[ch],
	* src/vinagre-notebook.[ch],
	* src/vinagre-commands.c:
	  - Uses auth-failure signal from gtk-vnc.

2007-09-11  Jonh Wendell  <jwendell@gnome.org>

	* src/vinagre-tab.c,
	* src/vinagre-window.[ch],
	* src/vinagre-connection.[ch]:
	  - Updates tab label and window title when we connect into a host.

2007-09-06  Jonh Wendell  <jwendell@gnome.org>

	* src/vinagre-tab.c:
	  - Show pointer grab/ungrab messages on statusbar

2007-09-06  Jonh Wendell  <jwendell@gnome.org>

	* src/vinagre-window.c
	* src/vinagre-window-private.h:
	  - Show tooltips on statusbar

2007-09-06  Jonh Wendell  <jwendell@gnome.org>

	* src/vinagre-tab.[hc]
	* src/vinagre-commands.[hc]
	* src/vinagre-window.c
	* src/vinagre-ui.h
	* data/vinagre-ui.xml:
	  - Added "Take Screenshot" feature

2007-08-31  Jonh Wendell  <jwendell@gnome.org>

	* lots of files:
	  - Added command line options parsing 
	  - Removed my own socket code, let gtk-vnc do the dirty job 

2007-08-31  Jonh Wendell  <jwendell@gnome.org>
