@@ -1,3 +1,10 @@
+2007-10-03  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-tab.c:
+	  - Connect to auth-unsupported signal from gtk-vnc, displaying a
+	    message to the user if we don't support the auth type from the
+	    server (Closes #478874)
+
 2007-09-18  Jonh Wendell  <jwendell@gnome.org>
 
 	* src/vinagre-favorites.c:
